package br.com.project.hydroflow.dto;

public record ChangePasswordDTO(Long userId, String newPassword) {}
