package br.com.project.hydroflow.dto;

public record FirstAccessDTO(Long userId, String message) {}
