package br.com.project.hydroflow.dto;

public record TokenDTO(String token) {}
