@startuml auth-classes
title Auth Module - Class Diagram

skinparam classAttributeIconSize 0
left to right direction
hide empty members

class AuthController {
  - authenticationManager: AuthenticationManager
  - jwtService: JwtService
  - userRepository: UserRepository
  - passwordEncoder: PasswordEncoder
  - passwordResetService: PasswordResetService
  + login(loginDTO: LoginDTO)
  + changePassword(dto: ChangePasswordDTO)
  + updatePassword(dto: ChangePasswordDTO)
  + forgotPassword(dto: ForgotPasswordDTO)
  + resetPassword(dto: ResetPasswordDTO)
}

class PasswordResetService {
  - userRepository: UserRepository
  - emailService: EmailService
  - passwordEncoder: PasswordEncoder
  - jwtService: JwtService
  + requestPasswordReset(dto: ForgotPasswordDTO)
  + resetPassword(dto: ResetPasswordDTO)
}

class EmailService {
  - mailSender: JavaMailSender
  + sendPasswordResetEmail(to: String, token: String)
}

class JwtAuthenticationFilter {
  - jwtService: JwtService
  - userDetailsService: UserDetailsService
}

class JwtService {
  - secret: String
  - expiration: Long
  + generateToken(user: User)
  + extractEmail(token: String)
  + isTokenValid(token: String, userDetails: UserDetails)
}

class UserDetailsServiceImpl {
  - userRepository: UserRepository
  + loadUserByUsername(email: String)
}

class SecurityConfig {
  - jwtAuthenticationFilter: JwtAuthenticationFilter
  - userDetailsService: UserDetailsService
  + securityFilterChain(http: HttpSecurity)
  + authenticationProvider()
}

interface UserDetailsService
interface UserRepository {
  + findByEmail(email: String)
  + findByPasswordResetToken(token: String)
  + findById(id: Long)
  + save(user: User)
}

class User {
  - id: Long
  - email: String
  - password: String
  - firstAccess: boolean
  - passwordResetToken: String
  - passwordResetTokenExpiresAt: LocalDateTime
  - role: Role
}

class Role {
  - id: Long
  - name: String
}

class LoginDTO {
  + email: String
  + password: String
}

class ChangePasswordDTO {
  + userId: Long
  + currentPassword: String
  + newPassword: String
}

class ForgotPasswordDTO {
  + email: String
}

class ResetPasswordDTO {
  + token: String
  + newPassword: String
}

class MessageDTO {
  + message: String
}

class TokenDTO {
  + token: String
}

class FirstAccessDTO {
  + userId: Long
  + message: String
}

UserDetailsServiceImpl ..|> UserDetailsService
AuthController --> JwtService
AuthController --> UserRepository
AuthController --> PasswordResetService
AuthController --> LoginDTO
AuthController --> ChangePasswordDTO
AuthController --> ForgotPasswordDTO
AuthController --> ResetPasswordDTO
AuthController --> MessageDTO
AuthController --> TokenDTO
AuthController --> FirstAccessDTO
PasswordResetService --> UserRepository
PasswordResetService --> EmailService
PasswordResetService --> JwtService
JwtAuthenticationFilter --> JwtService
JwtAuthenticationFilter --> UserDetailsService
UserDetailsServiceImpl --> UserRepository
UserRepository --> User
User --> Role
SecurityConfig --> JwtAuthenticationFilter
SecurityConfig --> UserDetailsService

@enduml
